game endpoints
